@@ -1,0 +1,23 @@
+/*
+ * Translated default messages for the jQuery validation plugin.
+ * Language: CS
+ */
+jQuery.extend(jQuery.validator.messages, {
+	required: "Tento údaj je povinný.",
+	remote: "Prosím, opravte tento údaj.",
+	email: "Prosím, zadejte platný e-mail.",
+	url: "Prosím, zadejte platné URL.",
+	date: "Prosím, zadejte platné datum.",
+	dateISO: "Prosím, zadejte platné datum (ISO).",
+	number: "Prosím, zadejte číslo.",
+	digits: "Prosím, zadávejte pouze číslice.",
+	creditcard: "Prosím, zadejte číslo kreditní karty.",
+	equalTo: "Prosím, zadejte znovu stejnou hodnotu.",
+	accept: "Prosím, zadejte soubor se správnou příponou.",
+	maxlength: jQuery.format("Prosím, zadejte nejvíce {0} znaků."),
+	minlength: jQuery.format("Prosím, zadejte nejméně {0} znaků."),
+	rangelength: jQuery.format("Prosím, zadejte od {0} do {1} znaků."),
+	range: jQuery.format("Prosím, zadejte hodnotu od {0} do {1}."),
+	max: jQuery.format("Prosím, zadejte hodnotu menší nebo rovnu {0}."),
+	min: jQuery.format("Prosím, zadejte hodnotu větší nebo rovnu {0}."),
+});
